<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">moers festival</string>
    <string name="app_information_paragraph1">This app is developed and provided voluntarily by Lennart Fischer.</string>
    <string name="app_information_paragraph2">"More information about moers festival can be found on the official website: "</string>
    <string name="about_this_app">About</string>
    <string name="navigation_news">News</string>
    <string name="navigation_map">Map</string>
    <string name="navigation_events">Timetable</string>
    <string name="navigation_info">Info</string>
    <string name="navigation_favorites">Favorites</string>
    <string name="info_hero_title">Info for your festival visit</string>
    <string name="info_hero_description">Everything you need to know about tickets, the festival village, volunteers, and other festival-related services.</string>

    <string name="info_section_festival">Festival</string>
    <string name="info_section_settings">Settings</string>
    <string name="info_section_debug">Debug</string>
    <string name="info_section_other">Other</string>
    <string name="info_row_tickets">Tickets</string>
    <string name="info_row_festivaldorf">Festivaldorf</string>
    <string name="info_row_volunteers">Volunteers</string>
    <string name="info_row_moersland">moersland</string>
    <string name="info_row_lodging">Lodging</string>
    <string name="info_row_accessibility">Accessibility</string>
    <string name="info_row_moerschandise">moerschandise</string>
    <string name="info_row_sponsors">Sponsors</string>
    <string name="info_row_legal">Legal</string>
    <string name="info_row_licenses">Licenses</string>
    <string name="info_row_notifications">Push Notifications</string>
    <string name="info_row_notifications_description">Enable festival updates, weather alerts, and short-term notices.</string>
    <string name="info_notification_prompt_title">Interested in festival updates?</string>
    <string name="info_notification_prompt_body">Turn on push notifications for schedule changes, weather alerts, and other short-term notices.</string>
    <string name="info_notification_prompt_action">Turn on notifications</string>
    <string name="info_debug_fcm_token_title">FCM Token</string>
    <string name="info_debug_fcm_token_loading">Loading token…</string>
    <string name="info_debug_fcm_token_empty">No FCM token is available.</string>
    <string name="info_debug_fcm_token_error">Unable to load token: %1$s</string>
    <string name="info_debug_fcm_token_error_unknown">Unknown error</string>
    <string name="info_debug_fcm_token_copy">Copy</string>
    <string name="info_debug_fcm_token_refresh">Refresh</string>
    <string name="info_debug_fcm_token_clip_label">FCM token</string>
    <string name="about_body">This app has been developed and maintained by Lennart Fischer since 2018. What started out as a purely volunteer project has now become an essential part of the festival. If you have any ideas for new features, please feel free to send feedback. A positive review in the Play Store also helps.</string>
    <string name="about_version">Version %1$s (%2$d)</string>
    <string name="about_rate_app">Rate the App</string>
    <string name="about_developer_name">Lennart Fischer</string>
    <string name="about_developer_role">Software Developer</string>
    <string name="about_link_website">Website</string>
    <string name="about_link_twitter">Twitter</string>
    <string name="about_link_instagram">Instagram</string>
    <string name="licenses_title">Licenses</string>
    <string name="licenses_intro">The moers festival app includes open-source components. Their license texts are listed below.</string>
    <string name="licenses_empty">No license texts are available right now.</string>

    <string name="notification_channel_default_name" translatable="false">moers festival</string>
    <string name="notification_channel_default_description">Notifications for moers festival</string>

    <string name="default_notification_channel_id" translatable="false">default_channel</string>
    <string name="default_notification_channel_name">Notifications</string>
    <string name="default_notification_channel_description">Get information about schedule changes, weather and other short-term notices.</string>
    <string name="onboarding_welcome_eyebrow">moers festival</string>
    <string name="onboarding_welcome_title">Discover the moers festival</string>
    <string name="onboarding_welcome_description">The moers festival app helps you find your way through the program. You can also build your own schedule in the app and get many more important festival details.</string>
    <string name="onboarding_continue">Continue</string>
    <string name="onboarding_notifications_kicker">Festival updates</string>
    <string name="onboarding_notifications_title">Push Notifications</string>
    <string name="onboarding_notifications_description">Receive push notifications to get all the latest news about Moers Festival.</string>
    <string name="onboarding_notifications_primary">Subscribe</string>
    <string name="onboarding_notifications_secondary">Not now</string>
    <string name="onboarding_step_indicator">Step %1$d of %2$d</string>
    <string name="onboarding_download_badge">Offline download</string>
    <string name="notification_settings_headline">Stay in sync during the festival</string>
    <string name="notification_settings_copy">Push notifications keep you up to date with schedule changes, weather, and other short-term information while silent refreshes keep the app current in the background.</string>
    <string name="notification_settings_status_enabled">Notifications are active</string>
    <string name="notification_settings_status_disabled">Notifications are off</string>
    <string name="notification_settings_request_body">Enable notifications directly in the app to receive festival updates on this device.</string>
    <string name="notification_settings_system_body">Android now requires you to enable notifications in the system settings for this app.</string>
    <string name="notification_settings_enabled_body">This device is ready to receive festival updates and background content refreshes.</string>
    <string name="notification_settings_syncing_body">Notifications are enabled. The app is finalizing your festival update subscription.</string>
    <string name="notification_settings_enable">Enable notifications</string>
    <string name="notification_settings_open_system_settings">Open system settings</string>
    <string name="shortcut_news_short">News</string>
    <string name="shortcut_news_long">Open news</string>
    <string name="shortcut_events_short">Timetable</string>
    <string name="shortcut_events_long">Open timetable</string>
    <string name="shortcut_favorites_short">Favorites</string>
    <string name="shortcut_favorites_long">Open favorites</string>

</resources>
